# deeprobot

./: .gitignore  README.md  WifiConnection.md  brainstorming_TP.md
TP/: README.md
TP/TP_00_Prise_en_main/: TP_00_Prise_en_main.ipynb
TP/TP_01_Classification_d_images/: TP_01_Classification_d_images.ipynb  imagenet_classes.py
robotbridge/src/robotbridge/: CMakeLists.txt  README.md  package.xml
robotbridge/src/robotbridge/launch/: robotlaunch.launch
robotbridge/src/robotbridge/robotclient/: __init__.py  robotclient.py  setup.py
robotbridge/src/robotbridge/scripts/: robotbridge
tools/: install.sh  runrobot.service  runrobot.sh
